// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageLoader > should match snapshot (minimal) 1`] = `
"<div imagefitparams=\\"[object Object]\\" showpixelintensity=\\"true\\">
  <div class=\\"overflow-hidden el-loading-parent--relative\\" style=\\"width: 200px; height: 300px; transform: scaleX(1.23);\\" imagefitparams=\\"[object Object]\\" loading-number=\\"1\\">
    <!---->
    <!---->
    <!---->
    <!---->
    <div class=\\"el-loading-mask\\" style=\\"display: none;\\">
      <div class=\\"el-loading-spinner\\"><svg class=\\"circular\\" viewBox=\\"0 0 50 50\\">
          <circle class=\\"path\\" cx=\\"25\\" cy=\\"25\\" r=\\"20\\" fill=\\"none\\"></circle>
        </svg>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`ImageLoader > should match snapshot (with everything turned on) 1`] = `
"<div imagefitparams=\\"[object Object]\\" showpixelintensity=\\"true\\" opticalsrc=\\"http://placekitten.com/200/300\\" opticaltransform=\\"1,2,3,4,5,6,7,8,9\\" scrollblock=\\"true\\">
  <div class=\\"overflow-hidden el-loading-parent--relative\\" style=\\"width: 200px; height: 300px; transform: scaleX(1.23);\\" imagefitparams=\\"[object Object]\\" loading-number=\\"1\\">
    <div data-test-key=\\"ion-image-panel\\" style=\\"left: 0px; top: 0px; width: 200px; height: 300px; transform-origin: 0 0; transform: translate(0px, 0px) scale(1, 1);\\"><canvas width=\\"200\\" height=\\"300\\" class=\\"absolute top-0 left-0 z-10 origin-top-left select-none pixelated\\" data-images=\\"http://placebacon.com/200/300\\"></canvas>
      <div><img crossorigin=\\"anonymous\\" src=\\"http://placekitten.com/200/300\\" class=\\"absolute top-0 left-0 -z-10 origin-top-left\\" style=\\"transform: matrix3d(1, 4, 0, 7,
             2, 5, 0, 8,
                      0,          0, 1,          0,
             3, 6, 0, 9); filter: brightness(100%) grayscale(0%);\\">
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class=\\"absolute inset-0 z-30 pointer-events-none bg-body flex items-center justify-center opacity-0 duration-1000\\">
      <p class=\\"relative block z-40 m-0 text-white text-2xl\\">Use CTRL + scroll wheel to zoom the image</p>
    </div>
    <div class=\\"el-loading-mask el-loading-fade-enter-from el-loading-fade-leave-from el-loading-fade-leave-active\\" style=\\"\\">
      <div class=\\"el-loading-spinner\\"><svg class=\\"circular\\" viewBox=\\"0 0 50 50\\">
          <circle class=\\"path\\" cx=\\"25\\" cy=\\"25\\" r=\\"20\\" fill=\\"none\\"></circle>
        </svg>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;
